--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -3,5 +3,24 @@ $primary: #3a7eab;
 $secondary: #1e1e1e;
 $dark: #161616;
 
+// import the functions & variables
+@import "../node_modules/bootstrap/scss/_functions.scss";
+@import "../node_modules/bootstrap/scss/_variables.scss";
+
+// custom theme
+$custom-theme-colors: (
+  "altprimary": #6bbaff,
+  "altgray": #a8a8a8,
+);
+
+$theme-colors: map-merge($custom-theme-colors, $theme-colors);
+
+// custom display sizes.
+$custom-display-font-sizes: (
+  7: 2.25rem,
+  8: 2rem,
+);
+
+$display-font-sizes: map-merge($display-font-sizes, $custom-display-font-sizes);
 // importing bootstrap
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
