Darkened bootstrap scss colors

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,7 +1,7 @@
 // custom (brand) variables
 $primary: #3a7eab;
-$secondary: #1e1e1e;
-$dark: #161616;
+$secondary: #131313;
+$dark: #1e1e1e;
 
 // import the functions & variables
 @import "../node_modules/bootstrap/scss/_functions.scss";
