Redesigned Hero Section component, Fishtail component, and Intro/outro components

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,5 @@
 // custom (brand) variables
-$primary: #3a7eab;
+$primary: #ffd500;
 $secondary: #131313;
 $dark: #1e1e1e;
 
@@ -9,7 +9,7 @@ $dark: #1e1e1e;
 
 // custom theme
 $custom-theme-colors: (
-  "altprimary": #6bbaff,
+  "altprimary": #ffd500,
   "altgray": #a8a8a8,
 );
 
