--- a/css/style.css
+++ b/css/style.css
@@ -187,3 +187,8 @@ ul li::before {
   width: 1em; /* Also needed for space (tweak if needed) */
   margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
+
+.anchor {
+  position: relative;
+  top: -150px;
+}
