--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+html{
+    font-size:16px;
+}
 body{
     font-family: "Comic Sans MS", cursive, sans-serif;
+    font-size:2rem;
+    
+    background-color:#303030;
+    color:white;
+}
+
+#hero .content{
+    position: absolute;
 }
