--- a/style.css
+++ b/style.css
@@ -1,14 +1,188 @@
-html{
-    font-size:16px;
+html {
+    /* 10px */
+    --primary-color: #FC9B2C;
+    --secondary-color: #557A54;
+    --font-color: #ffffff;
+    --light-gray: #B9B9B9;
+    --dark-gray: #383838;
+    --darker-gray: #282828;
+    font-size: 62.5%;
 }
-body{
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size:2rem;
+.bg-primary{
+    background-color:var(--primary-color);
+}
+.bg-secondary{
+    background-color:var(--secondary-color);
+}
+.bg-light{
+    background-color:var(--light-gray);
+}
+.bg-dark{
+    background-color:var(--dark-gray);
+}
+.bg-darker{
+    background-color:var(--light-gray);
+}
+
+.text-primary{
+    color:var(--primary-color);
+}
+.text-secondary{
+    color:var(--secondary-color);
+}
+.text-white{
+    color:var(--font-color);
+}
+.text-light{
+    color:var(--light-gray);
+}
+.text-dark{
+    color:var(--dark-gray);
+}
+.text-darker{
+    color:var(--light-gray);
+}
+.bold{
+    font-weight:bold;
+}
+body {
+    margin:0px;
+    /* 21px */
+    font-size: 2.1rem;
     
-    background-color:#303030;
+    font-family: 'Montserrat', sans-serif;
+    
+    background-color:var(--darker-gray);
     color:white;
+}
+button{
+    font-size: 2.1rem;
+    font-family: 'Montserrat', sans-serif;
+    color:white;
+    background-color:var(--dark-gray);
+    border:none;
+    padding:17px 26px;
+    width:fit-content;
+}
+a{
+    text-decoration: none;
+    color:white;
+    color:var(--secondary-color);
+}
+h1,h2{
+    font-weight:300;
+    font-family: 'Indie Flower', cursive;
+}
+h1,h2,h3,h4,h5,h6{
+    margin:0px;
+}
+.h1{
+    font-size:8.6rem;
+}
+.h2{
+    font-size:6rem;
+}
+.h3{
+    font-size:3.3rem;
+}
+.h4{
+    font-size:3rem;
+}
+.h5{
+    font-size:2.5rem;
+}
+.h6{
+    font-size:2.1rem;
 }
 
 #hero .content{
     position: absolute;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width:100%;
+}
+#hero .bottom{
+    margin-bottom: auto;
+    margin-top: auto;
+}
+#hero .bottom h2 + button{
+    margin-right:26px;
+}
+#hero .top{
+    margin-top:75px;
+}
+#hero .top a{
+    margin-right: 28px;
+}
+#hero h1{
+    max-height:9rem;
+}
+#hero h2{
+    margin-bottom:37px;
+}
+#hero {
+overflow:hidden;
+}
+
+
+
+.row{
+    display:flex;
+    flex-direction:row;
+}
+.column{
+    display:flex;
+    flex-direction:column;
+}
+
+@media screen and (min-width: 754px) {
+    .row-desktop{
+        flex-direction:row;
+    }
+}
+
+footer{
+    background-color:var(--dark-gray);
+}
+
+.container{
+    width:auto;
+    padding-left:30px;
+    padding-right:30px;
+}
+    /*on desktop*/
+@media screen and (min-width: 900px) {
+    .container{
+        max-width:900px;
+        width:900px;
+        margin-left:auto;
+        margin-right:auto;
+    }
+}
+
+.project{
+    margin-bottom:127px;
+}
+.project nav{
+    margin-top:2.1rem;
+    margin-bottom:2.1rem;
+}
+.project nav button{
+    margin-right:20px;
+}
+
+.project .preview{
+    width:100%;
+}
+@media screen and (min-width: 754px) {
+    .project .preview{
+        width:50%;
+    }
+}
+
+#about h3{
+    margin-bottom:20px;
 }
