--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ html {
     --darker-gray: #282828;
     font-size: 62.5%;
 }
+body {
+    margin:0px;
+    /* 21px */
+    font-size: 2.1rem;
+    
+    font-family: 'Montserrat', sans-serif;
+}
 .bg-primary{
     background-color:var(--primary-color);
 }
@@ -22,7 +29,7 @@ html {
     background-color:var(--dark-gray);
 }
 .bg-darker{
-    background-color:var(--light-gray);
+    background-color:var(--darker-gray);
 }
 
 .text-primary{
@@ -41,21 +48,12 @@ html {
     color:var(--dark-gray);
 }
 .text-darker{
-    color:var(--light-gray);
+    color:var(--darker-gray);
 }
 .bold{
     font-weight:bold;
 }
-body {
-    margin:0px;
-    /* 21px */
-    font-size: 2.1rem;
-    
-    font-family: 'Montserrat', sans-serif;
-    
-    background-color:var(--darker-gray);
-    color:white;
-}
+
 .button{
     font-size: 2.1rem;
     font-family: 'Montserrat', sans-serif;
@@ -83,6 +81,37 @@ h1,h2{
 h1,h2,h3,h4,h5,h6{
     margin:0px;
 }
+h1 .motif{
+    position:relative;
+}
+h1 .motif:after{
+    content: url(./assets/icons/icon_hero_motif.svg);
+    position: absolute;
+    right: -15px;
+    bottom: 31px;
+    display: inline-block;
+    transform: scale(.573);
+}
+h2 .motif{
+    position:relative;
+}
+#projects h2 .motif:after{
+    content: url(./assets/icons/icon_body_motif.svg);
+    position: absolute;
+    left: -20px;
+    bottom: 28px;
+    display: inline-block;
+    transform: scale(1.094);
+}
+#about h2 .motif:after{
+    content: url(./assets/icons/icon_body_motif.svg);
+    position: absolute;
+    left: -16px;
+    bottom: 38px;
+    display: inline-block;
+    transform: scale(1.094);
+}
+
 .h1{
     font-size:8.6rem;
 }
@@ -110,6 +139,8 @@ h1,h2,h3,h4,h5,h6{
     justify-content: space-between;
     height: 100%;
     width:100%;
+    
+    background: linear-gradient(180deg, rgba(0,0,0,0) 82%, var(--darker-gray) 91%);
 }
 #hero .bottom{
     margin-bottom: auto;
@@ -127,6 +158,7 @@ h1,h2,h3,h4,h5,h6{
 #hero h1{
     max-height:9rem;
 }
+
 #hero h2{
     margin-bottom:37px;
 }
@@ -193,6 +225,7 @@ footer{
 #about h3{
     margin-bottom:20px;
 }
+
 footer{
     margin-top:50px;
 }
