Beautified html css and js files

--- a/style.css
+++ b/style.css
@@ -1,412 +1,378 @@
 html {
-    scroll-behavior: smooth;
-    /* 10px */
-    --primary-color: #FC9B2C;
-    --secondary-color: #557A54;
-    --font-color: #ffffff;
-    --light-gray: #B9B9B9;
-    --dark-gray: #383838;
-    --darker-gray: #282828;
-    /*mobile 8.4px*/
-    font-size: 52.5%;
+	scroll-behavior: smooth;
+	/* 10px */
+	--primary-color: #FC9B2C;
+	--secondary-color: #557A54;
+	--font-color: #ffffff;
+	--light-gray: #B9B9B9;
+	--dark-gray: #383838;
+	--darker-gray: #282828;
+	/*mobile 8.4px*/
+	font-size: 52.5%;
 }
-@media only screen and (min-width : 628px){
-    html{
-    /*desktop 10 px*/
-    font-size: 62.5%;
-    }
+@media only screen and (min-width: 628px) {
+	html {
+		/*desktop 10 px*/
+		font-size: 62.5%;
+	}
 }
 body {
-    margin:0px;
-    /* 21px */
-    font-size: 2.1rem;
-    font-family: 'Montserrat', sans-serif;
+	margin: 0px;
+	/* 21px */
+	font-size: 2.1rem;
+	font-family: 'Montserrat', sans-serif;
 }
-.overflow-hidden{
-    overflow:hidden;
+.overflow-hidden {
+	overflow: hidden;
 }
-.bg-primary{
-    background-color:var(--primary-color);
+.bg-primary {
+	background-color: var(--primary-color);
 }
-.bg-secondary{
-    background-color:var(--secondary-color);
+.bg-secondary {
+	background-color: var(--secondary-color);
 }
-.bg-light{
-    background-color:var(--light-gray);
+.bg-light {
+	background-color: var(--light-gray);
 }
-.bg-dark{
-    background-color:var(--dark-gray);
+.bg-dark {
+	background-color: var(--dark-gray);
 }
-.bg-darker{
-    background-color:var(--darker-gray);
+.bg-darker {
+	background-color: var(--darker-gray);
 }
-
-.text-primary{
-    color:var(--primary-color);
+.text-primary {
+	color: var(--primary-color);
 }
-.text-secondary{
-    color:var(--secondary-color);
+.text-secondary {
+	color: var(--secondary-color);
 }
-.text-white{
-    color:var(--font-color);
+.text-white {
+	color: var(--font-color);
 }
-.text-light{
-    color:var(--light-gray);
+.text-light {
+	color: var(--light-gray);
 }
-.text-dark{
-    color:var(--dark-gray);
+.text-dark {
+	color: var(--dark-gray);
 }
-.text-darker{
-    color:var(--darker-gray);
+.text-darker {
+	color: var(--darker-gray);
 }
-.bold{
-    font-weight:bold;
+.bold {
+	font-weight: bold;
 }
-
-.button{
-    font-size: 2.1rem;
-    font-family: 'Montserrat', sans-serif;
-    color:white;
-    border:none;
-    background-color:var(--dark-gray);
-    padding:17px 26px;
-    width:fit-content;
+.button {
+	font-size: 2.1rem;
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	border: none;
+	background-color: var(--dark-gray);
+	padding: 17px 26px;
+	width: fit-content;
 }
-
-.button.bg-primary{
-    background-color:var(--primary-color);
+.button.bg-primary {
+	background-color: var(--primary-color);
 }
-.button.bg-secondary{
-    background-color:var(--secondary-color);
+.button.bg-secondary {
+	background-color: var(--secondary-color);
 }
-a{
-    text-decoration: none;
-    color:white;
+a {
+	text-decoration: none;
+	color: white;
 }
-h1,h2{
-    font-weight:300;
-    font-family: 'Indie Flower', cursive;
+h1, h2 {
+	font-weight: 300;
+	font-family: 'Indie Flower', cursive;
 }
-h1,h2,h3,h4,h5,h6{
-    margin:0px;
+h1, h2, h3, h4, h5, h6 {
+	margin: 0px;
 }
-h1 .motif{
-    position:relative;
+h1 .motif {
+	position: relative;
 }
 h1 .motif:after {
-    content: url(./assets/icons/icon_hero_motif.svg);
-    position: absolute;
-    right: -211px;
-    bottom: 41px;
-    display: inline-block;
-    transform: scale(0.443);
+	content: url(./assets/icons/icon_hero_motif.svg);
+	position: absolute;
+	right: -211px;
+	bottom: 41px;
+	display: inline-block;
+	transform: scale(0.443);
 }
-@media only screen and (min-width : 628px){
-    h1 .motif:after{
-        content: url(./assets/icons/icon_hero_motif.svg);
-        position: absolute;
-        right: -15px;
-        bottom: 57px;
-        display: inline-block;
-        transform: scale(.573);
-    }
+@media only screen and (min-width: 628px) {
+	h1 .motif:after {
+		content: url(./assets/icons/icon_hero_motif.svg);
+		position: absolute;
+		right: -15px;
+		bottom: 57px;
+		display: inline-block;
+		transform: scale(.573);
+	}
 }
-
-h2 .motif{
-    position:relative;
+h2 .motif {
+	position: relative;
 }
-#projects h2 .motif:after{
-    content: url(./assets/icons/icon_body_motif.svg);
-    position: absolute;
-    left: -18px;
-    bottom: 24px;
-    display: inline-block;
-    transform: scale(.8);
+#projects h2 .motif:after {
+	content: url(./assets/icons/icon_body_motif.svg);
+	position: absolute;
+	left: -18px;
+	bottom: 24px;
+	display: inline-block;
+	transform: scale(.8);
 }
-#about h2 .motif:after{
-    content: url(./assets/icons/icon_body_motif.svg);
-    position: absolute;
-    left: -16px;
-    bottom: 33px;
-    display: inline-block;
-    transform: scale(.8);
+#about h2 .motif:after {
+	content: url(./assets/icons/icon_body_motif.svg);
+	position: absolute;
+	left: -16px;
+	bottom: 33px;
+	display: inline-block;
+	transform: scale(.8);
 }
-
-@media only screen and (min-width : 628px){
-    #projects h2 .motif:after{
-        content: url(./assets/icons/icon_body_motif.svg);
-        position: absolute;
-        left: -20px;
-        bottom: 28px;
-        display: inline-block;
-        transform: scale(1.094);
-    }
-    #about h2 .motif:after{
-        content: url(./assets/icons/icon_body_motif.svg);
-        position: absolute;
-        left: -16px;
-        bottom: 38px;
-        display: inline-block;
-        transform: scale(1.094);
-    }
+@media only screen and (min-width: 628px) {
+	#projects h2 .motif:after {
+		content: url(./assets/icons/icon_body_motif.svg);
+		position: absolute;
+		left: -20px;
+		bottom: 28px;
+		display: inline-block;
+		transform: scale(1.094);
+	}
+	#about h2 .motif:after {
+		content: url(./assets/icons/icon_body_motif.svg);
+		position: absolute;
+		left: -16px;
+		bottom: 38px;
+		display: inline-block;
+		transform: scale(1.094);
+	}
 }
-.h1{
-    font-size:8.6rem;
+.h1 {
+	font-size: 8.6rem;
 }
-.h2{
-    font-size:6rem;
+.h2 {
+	font-size: 6rem;
 }
-.h3{
-    font-size:3.3rem;
+.h3 {
+	font-size: 3.3rem;
 }
-.h4{
-    font-size:3rem;
+.h4 {
+	font-size: 3rem;
 }
-.h5{
-    font-size:2.5rem;
+.h5 {
+	font-size: 2.5rem;
 }
-.h6{
-    font-size:2.1rem;
+.h6 {
+	font-size: 2.1rem;
 }
-
-#hero .content{
-    position: absolute;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    width:100%;
-    
-    background: linear-gradient(180deg, rgba(0,0,0,0) 82%, var(--darker-gray) 91%);
+#hero .content {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	width: 100%;
+	background: linear-gradient(180deg, rgba(0, 0, 0, 0) 82%, var(--darker-gray) 91%);
 }
-#hero .bottom{
-    margin-bottom: auto;
-    margin-top: auto;
+#hero .bottom {
+	margin-bottom: auto;
+	margin-top: auto;
 }
-#hero .bottom h2 + .button{
-    margin-right:26px;
+#hero .bottom h2+.button {
+	margin-right: 26px;
 }
-#hero .top{
-    margin-top:75px;
+#hero .top {
+	margin-top: 75px;
 }
-#hero .top a{
-    margin-right: 10px;
+#hero .top a {
+	margin-right: 10px;
 }
-#hero h1{
-    line-height:.7;
+#hero h1 {
+	line-height: .7;
 }
-
-#hero h2{
-    margin-bottom:37px;
-    line-height:1;
+#hero h2 {
+	margin-bottom: 37px;
+	line-height: 1;
 }
 #hero {
-height:100vh;
-overflow:hidden;
+	height: 100vh;
+	overflow: hidden;
 }
-
-
-.inline-block{
-    display:inline-block;
+.inline-block {
+	display: inline-block;
 }
-.row{
-    display:flex;
-    flex-direction:row;
+.row {
+	display: flex;
+	flex-direction: row;
 }
-.column{
-    display:flex;
-    flex-direction:column;
+.column {
+	display: flex;
+	flex-direction: column;
 }
-
 @media screen and (min-width: 754px) {
-    .row-desktop{
-        flex-direction:row;
-    }
+	.row-desktop {
+		flex-direction: row;
+	}
 }
+footer {
+	background-color: var(--dark-gray);
+}
+.container {
+	width: auto;
+	padding: 30px;
+}
+/*on desktop*/
 
-footer{
-    background-color:var(--dark-gray);
-}
-
-.container{
-    width:auto;
-    padding:30px;
-}
-    /*on desktop*/
 @media screen and (min-width: 900px) {
-    .container{
-        max-width:900px;
-        width:900px;
-        margin-left:auto;
-        margin-right:auto;
-    }
+	.container {
+		max-width: 900px;
+		width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
-
-.project{
-    margin-bottom:127px;
+.project {
+	margin-bottom: 127px;
 }
-.project nav{
-    margin-top:2.1rem;
-    margin-bottom:2.1rem;
+.project nav {
+	margin-top: 2.1rem;
+	margin-bottom: 2.1rem;
 }
-.project nav .button{
-    margin-right:20px;
+.project nav .button {
+	margin-right: 20px;
 }
-
-.project .preview{
-    width:100%;
+.project .preview {
+	width: 100%;
 }
 @media screen and (min-width: 754px) {
-    .project .preview{
-        height:250px;
-        width:auto;
-    }
+	.project .preview {
+		height: 250px;
+		width: auto;
+	}
 }
-
-#about h3{
-    margin-bottom:20px;
+#about h3 {
+	margin-bottom: 20px;
 }
-
-footer{
-    margin-top:50px;
+footer {
+	margin-top: 50px;
 }
-footer .column{
-    margin-top:20px;
-    margin-right:20px;
+footer .column {
+	margin-top: 20px;
+	margin-right: 20px;
 }
-footer .column > *{
-    margin-top:0px;
-    margin-bottom:20px;
+footer .column>* {
+	margin-top: 0px;
+	margin-bottom: 20px;
 }
-
 /*button grow animation */
+
 .button {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
 }
 .button:hover, .button:focus, .button:active {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
-
 /* link underline  animations */
+
 .link {
-  width:fit-content;
-  overflow:visible;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
+	width: fit-content;
+	overflow: visible;
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	position: relative;
 }
 .link:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 100%;
-  top:30px;
-  background: var(--secondary-color);
-  height: 4px;
-  -webkit-transition-property: right;
-  transition-property: right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+	content: "";
+	position: absolute;
+	z-index: -1;
+	left: 0;
+	right: 100%;
+	top: 30px;
+	background: var(--secondary-color);
+	height: 4px;
+	-webkit-transition-property: right;
+	transition-property: right;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
 }
 .link:hover:before, a:focus:before, a:active:before {
-  right: 0;
+	right: 0;
 }
-
-#page-loader{
-    display:none;
+#page-loader {
+	display: none;
 }
-#loader-wrapper{
-    touchAction:none;
-    scroll:none;
-    width:100%;
-    height:100%;
-    position:fixed;
-    top:0px;
-    left:0px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color:var(--darker-gray);
+#loader-wrapper {
+	touchAction: none;
+	scroll: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--darker-gray);
 }
 /*Page loader animations*/
 
 .loader {
-  --uib-size: 47px;
-  --uib-speed: 1s;
-  --uib-color: black;
-
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  width: var(--uib-size);
-  height: calc(var(--uib-size) * 0.17);
-  padding-top: calc(var(--uib-size) * 0.34);
+	--uib-size: 47px;
+	--uib-speed: 1s;
+	--uib-color: black;
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	justify-content: space-between;
+	width: var(--uib-size);
+	height: calc(var(--uib-size) * 0.17);
+	padding-top: calc(var(--uib-size) * 0.34);
 }
-
 .loader .dot {
-  flex-shrink: 0;
-  width: calc(var(--uib-size) * 0.17);
-  height: calc(var(--uib-size) * 0.17);
-  border-radius: 50%;
-  background-color: var(--dark-gray);
-  will-change: transform;
+	flex-shrink: 0;
+	width: calc(var(--uib-size) * 0.17);
+	height: calc(var(--uib-size) * 0.17);
+	border-radius: 50%;
+	background-color: var(--dark-gray);
+	will-change: transform;
 }
-
 .loader .dot:nth-child(1) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.45) infinite;
+	animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.45) infinite;
 }
-
 .loader .dot:nth-child(2) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.3) infinite;
+	animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.3) infinite;
 }
-
 .loader .dot:nth-child(3) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.15) infinite;
+	animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.15) infinite;
 }
-
 .loader .dot:nth-child(4) {
-  animation: jump var(--uib-speed) ease-in-out infinite;
+	animation: jump var(--uib-speed) ease-in-out infinite;
 }
-
 @keyframes jump {
-  0%,
-  100% {
-    transform: translateY(0px);
-  }
-
-  50% {
-    transform: translateY(-200%);
-  }
+	0%, 100% {
+		transform: translateY(0px);
+	}
+	50% {
+		transform: translateY(-200%);
+	}
 }
-
-
 @keyframes jump {
-  0%,
-  100% {
-    transform: translateY(0px);
-  }
-
-  50% {
-    transform: translateY(-200%);
-  }
+	0%, 100% {
+		transform: translateY(0px);
+	}
+	50% {
+		transform: translateY(-200%);
+	}
 }
