Added Explicit width/height for all img, Resolved incorrect aspect ratio for images on mobile

--- a/style.css
+++ b/style.css
@@ -218,6 +218,10 @@ overflow:hidden;
     display:flex;
     flex-direction:column;
 }
+.column img{
+    width:auto;
+    height:auto;
+}
 
 @media screen and (min-width: 754px) {
     .row-desktop{
@@ -256,6 +260,7 @@ footer{
 
 .project .preview{
     width:100%;
+    height:auto;
 }
 @media screen and (min-width: 754px) {
     .project .preview{
