--- a/style.css
+++ b/style.css
@@ -123,6 +123,14 @@ h2 .motif{
     display: inline-block;
     transform: scale(.8);
 }
+#services h2 .motif:after{
+    content: url(./assets/icons/icon_body_motif.svg);
+    position: absolute;
+    left: -19px;
+    bottom: 25px;
+    display: inline-block;
+    transform: scale(.8);
+}
 #about h2 .motif:after{
     content: url(./assets/icons/icon_body_motif.svg);
     position: absolute;
@@ -141,6 +149,14 @@ h2 .motif{
         display: inline-block;
         transform: scale(1.094);
     }
+    #services h2 .motif:after{
+        content: url(./assets/icons/icon_body_motif.svg);
+        position: absolute;
+        left: -21px;
+        bottom: 33px;
+        display: inline-block;
+        transform: scale(1.094);
+    }
     #about h2 .motif:after{
         content: url(./assets/icons/icon_body_motif.svg);
         position: absolute;
@@ -149,6 +165,7 @@ h2 .motif{
         display: inline-block;
         transform: scale(1.094);
     }
+    
 }
 .h1{
     font-size:8.6rem;
@@ -205,7 +222,9 @@ h2 .motif{
 height:100vh;
 overflow:hidden;
 }
-
+#about, #projects, #services{
+    margin-top:50px;
+}
 
 .inline-block{
     display:inline-block;
@@ -248,7 +267,7 @@ footer{
 }
 
 .project{
-    margin-bottom:127px;
+    margin-top:50px;
 }
 .project nav{
     margin-top:2.1rem;
@@ -268,7 +287,9 @@ footer{
         width:auto;
     }
 }
-
+.service{
+    margin-top:50px;
+}
 #about h3{
     margin-bottom:20px;
 }
