--- a/style.css
+++ b/style.css
@@ -1,310 +1,351 @@
 html {
-    scroll-behavior: smooth;
-    /* 10px */
-    --primary-color: #FC9B2C;
-    --secondary-color: #557A54;
-    --youtube-color: #D03939;
-    --font-color: #ffffff;
-    --light-gray: #B9B9B9;
-    --dark-gray: #383838;
-    --darker-gray: #282828;
-    /*mobile 8.4px*/
-    font-size: 52.5%;
+  scroll-behavior: smooth;
+  /* 10px */
+  --primary-color: #fc9b2c;
+  --secondary-color: #557a54;
+  --youtube-color: #d03939;
+  --font-color: #ffffff;
+  --light-gray: #b9b9b9;
+  --dark-gray: #383838;
+  --darker-gray: #282828;
+  /*mobile 8.4px*/
+  font-size: 52.5%;
 }
-@media only screen and (min-width : 628px){
-    html{
+@media only screen and (min-width: 628px) {
+  html {
     /*desktop 10 px*/
     font-size: 62.5%;
-    }
+  }
 }
 body {
-    margin:0px;
-    /* 21px */
-    font-size: 2.1rem;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0px;
+  /* 21px */
+  font-size: 2.1rem;
+  font-family: "Montserrat", sans-serif;
 }
 
-header nav{
-    display:flex;
-    flex-direction: column;
-    align-items: center; 
+header nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.overflow-hidden{
-    overflow:hidden;
+.overflow-hidden {
+  overflow: hidden;
 }
 .button.bg-primary,
-.bg-primary{
-    background-color:var(--primary-color);
+.bg-primary {
+  background-color: var(--primary-color);
 }
 .button.bg-secondary,
-.bg-secondary{
-    background-color:var(--secondary-color);
+.bg-secondary {
+  background-color: var(--secondary-color);
 }
 .button.bg-youtube,
-.bg-youtube{
-    background-color:var(--youtube-color);
+.bg-youtube {
+  background-color: var(--youtube-color);
 }
-.bg-light{
-    background-color:var(--light-gray);
+.bg-light {
+  background-color: var(--light-gray);
 }
-.bg-dark{
-    background-color:var(--dark-gray);
+.bg-dark {
+  background-color: var(--dark-gray);
 }
-.bg-darker{
-    background-color:var(--darker-gray);
-}
-
-.text-primary{
-    color:var(--primary-color);
-}
-.text-secondary{
-    color:var(--secondary-color);
-}
-.text-white{
-    color:var(--font-color);
-}
-.text-light{
-    color:var(--light-gray);
-}
-.text-dark{
-    color:var(--dark-gray);
-}
-.text-darker{
-    color:var(--darker-gray);
-}
-.bold{
-    font-weight:bold;
+.bg-darker {
+  background-color: var(--darker-gray);
 }
 
-.button{
-    font-size: 2.1rem;
-    font-family: 'Montserrat', sans-serif;
-    color:white;
-    border:none;
-    background-color:var(--dark-gray);
-    padding:17px 26px;
-    width:fit-content;
+.text-primary {
+  color: var(--primary-color);
+}
+.text-secondary {
+  color: var(--secondary-color);
+}
+.text-white {
+  color: var(--font-color);
+}
+.text-light {
+  color: var(--light-gray);
+}
+.text-dark {
+  color: var(--dark-gray);
+}
+.text-darker {
+  color: var(--darker-gray);
+}
+.bold {
+  font-weight: bold;
 }
 
+.button {
+  font-size: 2.1rem;
+  font-family: "Montserrat", sans-serif;
+  color: white;
+  border: none;
+  background-color: var(--dark-gray);
+  padding: 17px 26px;
+  width: fit-content;
+}
 
-a{
-    text-decoration: none;
-    color:white;
+a {
+  text-decoration: none;
+  color: white;
 }
-h1,h2{
-    font-weight:300;
-    font-family: 'Indie Flower', cursive;
+h1,
+h2 {
+  font-weight: 300;
+  font-family: "Indie Flower", cursive;
 }
-h1,h2,h3,h4,h5,h6{
-    margin:0px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
 }
-h1 .motif{
-    position:relative;
+h1 .motif {
+  position: relative;
 }
 h1 .motif:after {
-    content: url(./assets/icons/icon_hero_motif.svg);
-    position: absolute;
-    right: -211px;
-    bottom: 41px;
-    display: inline-block;
-    transform: scale(0.443);
+  content: url(./assets/icons/icon_hero_motif.svg);
+  position: absolute;
+  right: -211px;
+  bottom: 41px;
+  display: inline-block;
+  transform: scale(0.443);
 }
 
+h2 .motif {
+  position: relative;
+}
+#projects h2 .motif:after {
+  content: url(./assets/icons/icon_body_motif.svg);
+  position: absolute;
+  left: -18px;
+  bottom: 24px;
+  display: inline-block;
+  transform: scale(0.8);
+}
+#services h2 .motif:after {
+  content: url(./assets/icons/icon_body_motif.svg);
+  position: absolute;
+  left: -19px;
+  bottom: 25px;
+  display: inline-block;
+  transform: scale(0.8);
+}
+#about h2 .motif:after {
+  content: url(./assets/icons/icon_body_motif.svg);
+  position: absolute;
+  left: -16px;
+  bottom: 33px;
+  display: inline-block;
+  transform: scale(0.8);
+}
 
-h2 .motif{
-    position:relative;
-}
-#projects h2 .motif:after{
+@media only screen and (min-width: 628px) {
+  #projects h2 .motif:after {
     content: url(./assets/icons/icon_body_motif.svg);
     position: absolute;
-    left: -18px;
-    bottom: 24px;
+    left: -20px;
+    bottom: 28px;
     display: inline-block;
-    transform: scale(.8);
-}
-#services h2 .motif:after{
+    transform: scale(1.094);
+  }
+  #services h2 .motif:after {
     content: url(./assets/icons/icon_body_motif.svg);
     position: absolute;
-    left: -19px;
-    bottom: 25px;
+    left: -21px;
+    bottom: 33px;
     display: inline-block;
-    transform: scale(.8);
-}
-#about h2 .motif:after{
+    transform: scale(1.094);
+  }
+  #about h2 .motif:after {
     content: url(./assets/icons/icon_body_motif.svg);
     position: absolute;
     left: -16px;
-    bottom: 33px;
+    bottom: 38px;
     display: inline-block;
-    transform: scale(.8);
+    transform: scale(1.094);
+  }
+}
+.h1 {
+  font-size: 8.6rem;
+}
+.h2 {
+  font-size: 6rem;
+}
+.h3 {
+  font-size: 3.3rem;
+}
+.h4 {
+  font-size: 3rem;
+}
+.h5 {
+  font-size: 2.5rem;
+}
+.h6 {
+  font-size: 2.1rem;
 }
 
-@media only screen and (min-width : 628px){
-    #projects h2 .motif:after{
-        content: url(./assets/icons/icon_body_motif.svg);
-        position: absolute;
-        left: -20px;
-        bottom: 28px;
-        display: inline-block;
-        transform: scale(1.094);
-    }
-    #services h2 .motif:after{
-        content: url(./assets/icons/icon_body_motif.svg);
-        position: absolute;
-        left: -21px;
-        bottom: 33px;
-        display: inline-block;
-        transform: scale(1.094);
-    }
-    #about h2 .motif:after{
-        content: url(./assets/icons/icon_body_motif.svg);
-        position: absolute;
-        left: -16px;
-        bottom: 38px;
-        display: inline-block;
-        transform: scale(1.094);
-    }
-    
+#hero .content {
+  position: absolute;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 82%,
+    var(--darker-gray) 91%
+  );
 }
-.h1{
-    font-size:8.6rem;
+#hero .bottom {
+  text-align: center;
+  margin-bottom: auto;
+  margin-top: auto;
 }
-.h2{
-    font-size:6rem;
-}
-.h3{
-    font-size:3.3rem;
-}
-.h4{
-    font-size:3rem;
-}
-.h5{
-    font-size:2.5rem;
-}
-.h6{
-    font-size:2.1rem;
+#hero .bottom h2 + .button {
+  margin-right: 26px;
 }
 
-#hero .content{
-    position: absolute;
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    width:100%;
-    
-    background: linear-gradient(180deg, rgba(0,0,0,0) 82%, var(--darker-gray) 91%);
+nav .button {
+  margin-right: 20px;
 }
-#hero .bottom{
-    text-align: center;
-    margin-bottom: auto;
-    margin-top: auto;
+#hero .top a {
+  margin-right: 10px;
 }
-#hero .bottom h2 + .button{
-    margin-right:26px;
+#hero h1 {
+  line-height: 0.7;
 }
 
-#hero .top nav{
-    gap:5px;
-}
-#hero .top a{
-    margin-right: 10px;
-}
-#hero h1{
-    line-height:.7;
-}
-
-#hero h2{
-    margin-bottom:37px;
-    line-height:1;
+#hero h2 {
+  margin-bottom: 37px;
+  line-height: 1;
 }
 #hero {
-height:100vh;
-overflow:hidden;
+  height: 100vh;
+  overflow: hidden;
 }
-#about, #projects, #services{
-    margin-top:50px;
+#projects,
+#services {
+  margin-top: 50px;
 }
 
-.inline-block{
-    display:inline-block;
+#about {
+  margin-top: 130px;
 }
-.row{
-    display:flex;
-    flex-direction:row;
+
+.inline-block {
+  display: inline-block;
 }
-.column{
-    display:flex;
-    flex-direction:column;
+
+.portrait-image-align {
+  display: flex;
+  justify-content: flex-end;
 }
-.column img{
-    width:auto;
-    height:auto;
+.portrait-image-wrapper {
+  position: relative;
+  width: fit-content;
+  display: flex;
+  justify-content: flex-end;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+}
+.column img {
+  width: auto;
+  height: auto;
+}
+.col-3 {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+#portrait-image {
+  width: 275px;
+  height: 410px;
+}
+#portrait-splash {
+  display: none;
 }
 
 @media screen and (min-width: 754px) {
-    .row-desktop{
-        flex-direction:row;
-    }
+  .row-desktop {
+    flex-direction: row;
+  }
+  #portrait-splash {
+    display: block;
+    position: absolute;
+    z-index: -1;
+    bottom: 75px;
+    left: -47px;
+  }
 }
 
-footer{
-    background-color:var(--dark-gray);
+footer {
+  background-color: var(--dark-gray);
 }
 
-.container{
-    width:auto;
-    padding:30px;
+.container {
+  width: auto;
+  padding: 30px;
 }
-    /*on desktop*/
+/*on desktop*/
 @media screen and (min-width: 900px) {
-    .container{
-        max-width:900px;
-        width:900px;
-        margin-left:auto;
-        margin-right:auto;
-    }
+  .container {
+    max-width: 900px;
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
-.project{
-    margin-top:50px;
+.project {
+  margin-top: 50px;
 }
-.project nav{
-    margin-top:2.1rem;
-    margin-bottom:2.1rem;
-}
-.project nav .button{
-    margin-right:20px;
+.project nav {
+  margin-top: 2.1rem;
+  margin-bottom: 2.1rem;
 }
 
-.project .preview{
-    width:100%;
-    height:auto;
+.project .preview {
+  width: 100%;
+  height: auto;
 }
 @media screen and (min-width: 754px) {
-    .project .preview{
-        height:250px;
-        width:auto;
-    }
+  .project .preview {
+    height: 200px;
+    margin-top: 18px;
+    width: auto;
+  }
 }
-.service{
-    margin-top:50px;
+.service {
+  margin-top: 50px;
 }
-#about h3{
-    margin-bottom:20px;
+#about h3 {
+  margin-bottom: 20px;
 }
 
-footer{
-    margin-top:50px;
+footer {
+  margin-top: 50px;
 }
-footer .column{
-    margin-top:20px;
-    margin-right:20px;
+footer .column {
+  margin-top: 20px;
+  margin-right: 20px;
 }
-footer .column > *{
-    margin-top:0px;
-    margin-bottom:20px;
+footer .column > * {
+  margin-top: 0px;
+  margin-bottom: 20px;
 }
 
 /*button grow animation */
@@ -319,15 +360,17 @@ footer .column > *{
   -webkit-transition-property: transform;
   transition-property: transform;
 }
-.button:hover, .button:focus, .button:active {
+.button:hover,
+.button:focus,
+.button:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
 
 /* link underline  animations */
 .link {
-  width:fit-content;
-  overflow:visible;
+  width: fit-content;
+  overflow: visible;
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
@@ -341,7 +384,7 @@ footer .column > *{
   z-index: -1;
   left: 0;
   right: 100%;
-  top:30px;
+  top: 30px;
   background: var(--secondary-color);
   height: 4px;
   -webkit-transition-property: right;
@@ -351,25 +394,27 @@ footer .column > *{
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.link:hover:before, a:focus:before, a:active:before {
+.link:hover:before,
+a:focus:before,
+a:active:before {
   right: 0;
 }
 
-#page-loader{
-    display:none;
+#page-loader {
+  display: none;
 }
-#loader-wrapper{
-    touchAction:none;
-    scroll:none;
-    width:100%;
-    height:100%;
-    position:fixed;
-    top:0px;
-    left:0px;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    background-color:var(--darker-gray);
+#loader-wrapper {
+  touchaction: none;
+  scroll: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--darker-gray);
 }
 /*Page loader animations*/
 
@@ -397,18 +442,18 @@ footer .column > *{
 }
 
 .loader .dot:nth-child(1) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.45) infinite;
+  animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.45)
+    infinite;
 }
 
 .loader .dot:nth-child(2) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.3) infinite;
+  animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.3)
+    infinite;
 }
 
 .loader .dot:nth-child(3) {
-  animation: jump var(--uib-speed) ease-in-out
-    calc(var(--uib-speed) * -0.15) infinite;
+  animation: jump var(--uib-speed) ease-in-out calc(var(--uib-speed) * -0.15)
+    infinite;
 }
 
 .loader .dot:nth-child(4) {
@@ -426,7 +471,6 @@ footer .column > *{
   }
 }
 
-
 @keyframes jump {
   0%,
   100% {
@@ -438,28 +482,27 @@ footer .column > *{
   }
 }
 
-@media only screen and (min-width : 628px){
-    header nav{
-        display:flex;
-        flex-direction: row;
-        
-    }
-    #hero .top{
-        margin-top:75px;
-    }
-    #hero .top nav{
-        gap:55px;
-    }
-    #hero .bottom{
-        text-align: start;
-    }
+@media only screen and (min-width: 628px) {
+  header nav {
+    display: flex;
+    flex-direction: row;
+  }
+  #hero .top {
+    margin-top: 75px;
+  }
+  #hero .top nav {
+    gap: 55px;
+  }
+  #hero .bottom {
+    text-align: start;
+  }
 
-    h1 .motif:after{
-        content: url(./assets/icons/icon_hero_motif.svg);
-        position: absolute;
-        right: -15px;
-        bottom: 57px;
-        display: inline-block;
-        transform: scale(.573);
-    }
+  h1 .motif:after {
+    content: url(./assets/icons/icon_hero_motif.svg);
+    position: absolute;
+    right: -15px;
+    bottom: 57px;
+    display: inline-block;
+    transform: scale(0.573);
+  }
 }
